--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="`moments` is developer Trevor J Alt’s love letter to Instagram,  
+        a social media platform and passion project designed for ongoing 
+        development and personal educational growth in image processing and 
+        how to implement a heavily conditionally rendered environment which 
+        handles large amounts of data storage and retrieval."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" sizes="180x180" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,6 +29,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>moments</title>
+    <meta property="og:title" content="moments" />
+    <meta property="og:image" content="%PUBLIC_URL%/moments-social.png" />
+    <meta property="og:description" content="moments is developer Trevor J Alt’s love letter to Instagram,  a social media platform and passion project designed for ongoing development and personal educational growth in image processing and how to implement a heavily conditionally rendered environment which handles large amounts of data storage and retrieval." />
+    <meta property="og:url" content="//moments-live.vercel.app" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
